SH-140: Safari - Footer content alignment bug

--- a/app/design/frontend/Shop/hh/web/css/main.less
+++ b/app/design/frontend/Shop/hh/web/css/main.less
@@ -1140,6 +1140,9 @@ Footer
     margin-top: 10px;
   }
 }
+.footer-subscribe {
+  margin-left: 8%;
+}
 
 div.mage-error[generated] {
   font-size: 14px;
